BPER/DEVF/force-app/main/default/objects/CRM_AccountAccountJointOwnershipRelation__c/CRM_AccountAccountJointOwnershipRelation__c.object-meta.xml
<CustomObject>
    <label>Relazione di cointestazione</label>
    <nameField>
        <displayFormat>RDC - {00000000}</displayFormat>
        <label>Nome AccountAccountJointOwnership Relati</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Relazioni di cointestazione</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>