BPER/DEVF/force-app/main/default/objects/CRM_AccountAccountJointOwnershipRelation__c/fields/CRM_Account__c.field-meta.xml
<CustomField>
    <fullName>CRM_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Relazioni di cointestazione (Account)</relationshipLabel>
    <relationshipName>AccountContactJointOwnershipRelations1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>