BPER/DEVF/force-app/main/default/objects/CRM_AccountAccountJointOwnershipRelation__c/fields/CRM_Active__c.field-meta.xml
<CustomField>
    <fullName>CRM_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>