BPER/DEVF/force-app/main/default/objects/CRM_AccountAccountJointOwnershipRelation__c/fields/CRM_FormulaJointOwnershipOwners__c.field-meta.xml
<CustomField>
    <fullName>CRM_FormulaJointOwnershipOwners__c</fullName>
    <formula>CRM_JointOwnership__r.CRM_JointOwnershipOwners__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Joint Ownership Owners</label>
    <type>Text</type>
</CustomField>