BPER/DEVF/force-app/main/default/objects/CRM_AccountAccountJointOwnershipRelation__c/fields/CRM_JointOwnership__c.field-meta.xml
<CustomField>
    <fullName>CRM_JointOwnership__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Joint Ownership</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Cointestazione</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipName>AccountContactJointOwnershipRelations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>