BPER/DEVF/force-app/main/default/objects/CRM_AccountAccountJointOwnershipRelation__c/fields/CRM_PrimaryNDG__c.field-meta.xml
<CustomField>
    <fullName>CRM_PrimaryNDG__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary NDG</label>
    <type>Checkbox</type>
</CustomField>