BPER/DEVF/force-app/main/default/objects/CRM_AccountAccountJointOwnershipRelation__c/fields/CRM_RuoloCointestatario__c.field-meta.xml
<CustomField>
    <fullName>CRM_RuoloCointestatario__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ruolo Cointestatario</label>
    <type>Checkbox</type>
</CustomField>