BPER/DEVF/force-app/main/default/objects/CRM_AccountAccountJointOwnershipRelation__c/fields/PTF_CheckArea188CO__c.field-meta.xml
<CustomField>
    <fullName>PTF_CheckArea188CO__c</fullName>
    <formula>OR (
				AND (
								OR (
												CRM_Account__r.PTF_Area__r.PTF_IdCED__c = $User.PTF_IdCEDPadre__c,
												CRM_JointOwnership__r.PTF_Area__r.PTF_IdCED__c = $User.PTF_IdCEDPadre__c
								),
								$User.PTF_IdCEDPadre__c != null,
								$User.PTF_TipologiaUO__c = &apos;AltraUnitaOrganizzativa&apos;
				),
    AND(
				    OR(
								    CRM_Account__r.PTF_Area__r.PTF_IdCED__c ==  $User.idced__c, 
    								CRM_JointOwnership__r.PTF_Area__r.PTF_IdCED__c == $User.idced__c
    				), 
	    			$User.idced__c != null
				)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Area 188/CO</label>
    <type>Checkbox</type>
</CustomField>