BPER/DEVF/force-app/main/default/objects/CRM_AccountAccountJointOwnershipRelation__c/fields/PTF_CheckFiliale188CO__c.field-meta.xml
<CustomField>
    <fullName>PTF_CheckFiliale188CO__c</fullName>
    <formula>OR (
    AND(
								OR (
												CRM_Account__r.PTF_Capofila__r.PTF_IdCED__c == $User.idced__c,
												CRM_JointOwnership__r.PTF_Capofila__r.PTF_IdCED__c == $User.idced__c
								),
								$User.idced__c != null
				),
    AND(
				    OR(
								    CRM_Account__r.PTF_Filiale__r.PTF_IdCED__c ==  $User.idced__c, 
								    CRM_JointOwnership__r.PTF_Filiale__r.PTF_IdCED__c == $User.idced__c
    				), 
				    $User.idced__c != null
				)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Filiale 188/CO</label>
    <type>Checkbox</type>
</CustomField>