BPER/DEVF/force-app/main/default/objects/CRM_AccountAccountJointOwnershipRelation__c/fields/PTF_CheckPortafoglio__c.field-meta.xml
<CustomField>
    <fullName>PTF_CheckPortafoglio__c</fullName>
    <formula>CRM_JointOwnership__r.PTF_Portafoglio__c = CRM_Account__r.PTF_Portafoglio__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check portafoglio</label>
    <type>Checkbox</type>
</CustomField>