BPER/DEVF/force-app/main/default/objects/CRM_AccountAccountJointOwnershipRelation__c/fields/PTF_IntestazioneCointestazione__c.field-meta.xml
<CustomField>
    <fullName>PTF_IntestazioneCointestazione__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; CRM_JointOwnership__c, CRM_JointOwnership__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Intestazione Cointestazione</label>
    <type>Text</type>
</CustomField>