BPER/DEVF/force-app/main/default/objects/CRM_AccountAccountJointOwnershipRelation__c/fields/PTF_IntestazionePrimario__c.field-meta.xml
<CustomField>
    <fullName>PTF_IntestazionePrimario__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; CRM_Account__c, (CRM_Account__r.FirstName + &apos; &apos; + CRM_Account__r.LastName))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Intestazione Primario</label>
    <type>Text</type>
</CustomField>