BPER/DEVF/force-app/main/default/objects/CRM_AccountAccountJointOwnershipRelation__c/fields/PTF_IsSuperuser__c.field-meta.xml
<CustomField>
    <fullName>PTF_IsSuperuser__c</fullName>
    <formula>CONTAINS ($Profile.Name, &apos;D.0&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Superuser</label>
    <type>Checkbox</type>
</CustomField>