BPER/DEVF/force-app/main/default/objects/CRM_AccountAccountJointOwnershipRelation__c/fields/PTF_PrimaryNDGWallet__c.field-meta.xml
<CustomField>
    <fullName>PTF_PrimaryNDGWallet__c</fullName>
    <formula>IF ( 
				AND ( 
								NOT(ISBLANK(CRM_Account__r.PTF_Portafoglio__c)), 
								NOT(ISBLANK(CRM_JointOwnership__r.PTF_Portafoglio__c))
				),
				HYPERLINK(&quot;/&quot; &amp; CRM_Account__r.PTF_Portafoglio__c, CRM_Account__r.PTF_Portafoglio__r.Name),
				null
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Microportafoglio Primario</label>
    <type>Text</type>
</CustomField>