BPER/DEVF/force-app/main/default/objects/CRM_AccountAccountJointOwnershipRelation__c/fields/PTF_SameFiliale__c.field-meta.xml
<CustomField>
    <fullName>PTF_SameFiliale__c</fullName>
    <formula>AND ( CRM_PrimaryNDG__c,  CRM_Account__r.PTF_Filiale__c == CRM_JointOwnership__r.PTF_Filiale__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stessa filiale</label>
    <type>Checkbox</type>
</CustomField>