BPER/DEVF/force-app/main/default/objects/CRM_AccountAccountJointOwnershipRelation__c/fields/PTF_SameMDS__c.field-meta.xml
<CustomField>
    <fullName>PTF_SameMDS__c</fullName>
    <formula>AND( CRM_PrimaryNDG__c ,  TEXT(CRM_Account__r.ModelloDiServizio__c) ==  TEXT(CRM_JointOwnership__r.ModelloDiServizio__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stesso M-MDS</label>
    <type>Checkbox</type>
</CustomField>