BPER/DEVF/force-app/main/default/objects/CRM_AccountAccountJointOwnershipRelation__c/fields/Tipo_collegamento__c.field-meta.xml
<CustomField>
    <fullName>Tipo_collegamento__c</fullName>
    <formula>RIGHT(NDW_ExternalId__c  ,3)</formula>
    <label>Tipo collegamento</label>
    <type>Text</type>
</CustomField>